--- a/_studies/2024-05-12-my-test.md
+++ b/_studies/2024-05-12-my-test.md
@@ -6,6 +6,7 @@ tags:
 - test
 math: true
 date: 2024-05-11 12:32 +0800
+image: /adws2/assets/ruby2.jpg
 ---
 Not Pure Poole supports [MathJax](https://www.mathjax.org/). You can enable it on a page by setting `math: true` in the front matter.
 
