--- a/_studies/2024-05-12-KAN.md
+++ b/_studies/2024-05-12-KAN.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: Test
+title: KAN 논문리뷰
 tags: 
-- test
+- Deep Learning
+- Review
 math: true
-date: 2024-05-19
+date: 2024-05-12
 ---
 Not Pure Poole supports [MathJax](https://www.mathjax.org/). You can enable it on a page by setting `math: true` in the front matter.
 
