--- a/_studies/2024-05-12-adalora.md
+++ b/_studies/2024-05-12-adalora.md
@@ -1,19 +1,13 @@
 ---
 layout: post
-title: KAN 논문리뷰
+title: Adalora 논문리뷰
 tags: 
 - Deep Learning
 - Review
+- PEFT
 math: true
 date: 2024-05-12
 ---
-Not Pure Poole supports [MathJax](https://www.mathjax.org/). You can enable it on a page by setting `math: true` in the front matter.
 
-An inline math: \\\(E=mc^2\\\).
+### what is the AdaLora ?
 
-A display math:
-
-$$
-i\hbar \frac{\partial \Psi}{\partial t} = -\frac{\hbar^2}{2m}
-\frac{\partial^2 \Psi}{\partial x^2} + V \Psi
-$$
