--- a/_studies/2024-05-15-YOLO-R.md
+++ b/_studies/2024-05-15-YOLO-R.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: post
 title: YOLO-R
 tags: 
@@ -95,4 +95,4 @@ self.m : 모델의 마지막 layer
 
 - implicitM :prediction refinement 할 수 있게하는 모듈.
 단순히 1차원 nn parameter 를 4차원으로 expand 해서 feature 에 곱해주는 연산
-곱해주어야 하기 때문에 initialization 할때, 평균을 1로 둔다.
+곱해주어야 하기 때문에 initialization 할때, 평균을 1로 둔다. -->
