--- a/_studies/2024-05-15-Meta-DETR.md
+++ b/_studies/2024-05-15-Meta-DETR.md
@@ -1,9 +1,12 @@
----
+<!-- ---
 layout: post
-title: [논문 리뷰] Meta-DETR
+title: Meta-DETR
 tags: 
 - Deep Learning
 - Review
+- Object Detection
+- Meta Learning
+- Few shot
 math: true
 date: 2024-05-15
 ---
@@ -35,4 +38,4 @@ date: 2024-05-15
 - Query feature 와 랜덤 샘플링한 support feature 를 각각 Attention 의 query, key 값으로 넣어준다.
 - Attention coefficent : $A = \bf{Softmax} \left( \frac {{\bf(QW)}{\bf(SW)}^T}{\sqrt d} \right)$, 
 where d = the number of dimension , Q = query feature, S = support feature, W = learnable parameters (Linear projection)
-- 위와 같이 어탠션을 준다면, Query image 와 support image 의 feature 가 잘 aggregation 될 것이다.
+- 위와 같이 어탠션을 준다면, Query image 와 support image 의 feature 가 잘 aggregation 될 것이다. -->
