--- a/_studies/2024-05-15-Meta-DETR.md
+++ b/_studies/2024-05-15-Meta-DETR.md
@@ -1,15 +1,15 @@
----
+<!-- ---
 layout: post
 title: Meta-DETR
 tags: 
 - Deep Learning
 - Review
-# - Object Detection
-# - Meta Learning
-# - Few shot
+- Object Detection
+- Meta Learning
+- Few shot
 math: true
 date: 2024-05-15
----
+--- -->
 
 # Meta-detr
 
