--- a/_studies/2024-05-15-Meta-DETR.md
+++ b/_studies/2024-05-15-Meta-DETR.md
@@ -1,6 +1,6 @@
-<!-- ---
+---
 layout: post
-title: Meta-DETR
+title: Meta DETR
 tags: 
 - Deep Learning
 - Review
@@ -9,7 +9,7 @@ tags:
 - Few shot
 math: true
 date: 2024-05-15
---- -->
+---
 
 # Meta-detr
 
