--- a/_studies/2024-05-12-KAN.md
+++ b/_studies/2024-05-12-KAN.md
@@ -9,3 +9,13 @@ date: 2024-05-12
 ---
 
 ### what is the KAN ?
+
+# Meta-detr
+
+- fewshot learning : 잘 알고 있는 base class  이용 → 적은 양의 샘플이 있는 novel class 학습
+- metric based learning : Inter class correlation 정보를 사용하기 위한 attention module ( = CAM) 제안
+
+### DETR
+
+- Meta-DETR 의 디반 되는 모델 : [[2005.12872] End-to-End Object Detection with Transformers (arxiv.org)](https://arxiv.org/abs/2005.12872)
+- Detection 문제를 Transformer 로 접근함
