--- a/_studies/2024-05-12-KAN.md
+++ b/_studies/2024-05-12-KAN.md
@@ -19,3 +19,15 @@ date: 2024-05-12
 
 - Meta-DETR 의 디반 되는 모델 : [[2005.12872] End-to-End Object Detection with Transformers (arxiv.org)](https://arxiv.org/abs/2005.12872)
 - Detection 문제를 Transformer 로 접근함
+
+<img src="images\캡처.JPG (1).jpg" width="400px" height="100px"></img>
+
+- 이미지는 CNN Backbone, transformer 구조를 통과해 d 차원 hidden state 를 갖게됨.
+- d 차원 hidden state 를 Linear layer 를 사용하여 쿼리 개수 만큼 class, box embedding 시킴.
+- Loss 는 Hungarian algorithm 을 사용해 쿼리와 타겟을 매칭시킴.
+- 네트워크에 RPN, FPN ,NMS, Anchor box 없음.
+
+### CAM (Correalational Aggregation Module)
+
+- Meta DETR 의 핵심 구조, Attention Module 로 encoder 속에 있음.
+- 나머지 구조는 DETR 과 유사함
