--- a/_studies/2024-05-12-KAN.md
+++ b/_studies/2024-05-12-KAN.md
@@ -35,6 +35,6 @@ date: 2024-05-12
 <img src="images\캡처.JPG (2).jpg" width="400px" height="500px">
 
 - Query feature 와 랜덤 샘플링한 support feature 를 각각 Attention 의 query, key 값으로 넣어준다.
-- Attention coefficent : $$A = \mathbf{Softmax} \left( \frac {{\bf(QW)}{\bf(SW)}^T}{\sqrt d} \right)$$, 
+- Attention coefficent : , 
 where d = the number of dimension , Q = query feature, S = support feature, W = learnable parameters (Linear projection)
 - 위와 같이 어탠션을 준다면, Query image 와 support image 의 feature 가 잘 aggregation 될 것이다.
