--- a/_studies/2024-05-12-KAN.md
+++ b/_studies/2024-05-12-KAN.md
@@ -20,7 +20,7 @@ date: 2024-05-12
 - Meta-DETR 의 디반 되는 모델 : [[2005.12872] End-to-End Object Detection with Transformers (arxiv.org)](https://arxiv.org/abs/2005.12872)
 - Detection 문제를 Transformer 로 접근함
 
-<img src="images\캡처.JPG (1).jpg" width="400px" height="100px">
+<img src="images\캡처.JPG (1).jpg" width="550px">
 
 - 이미지는 CNN Backbone, transformer 구조를 통과해 d 차원 hidden state 를 갖게됨.
 - d 차원 hidden state 를 Linear layer 를 사용하여 쿼리 개수 만큼 class, box embedding 시킴.
@@ -32,9 +32,9 @@ date: 2024-05-12
 - Meta DETR 의 핵심 구조, Attention Module 로 encoder 속에 있음.
 - 나머지 구조는 DETR 과 유사함
 
-<img src="images\캡처.JPG (2).jpg" width="400px" height="500px">
+<img src="images\캡처.JPG (2).jpg" width="550px">
 
 - Query feature 와 랜덤 샘플링한 support feature 를 각각 Attention 의 query, key 값으로 넣어준다.
-- Attention coefficent : , 
+- Attention coefficent : $$A = \mathbf{Softmax} \left( \frac {\mathbf{(QW)} \mathbf{(SW)}^T} {\sqrt{d}} \right)$$, 
 where d = the number of dimension , Q = query feature, S = support feature, W = learnable parameters (Linear projection)
 - 위와 같이 어탠션을 준다면, Query image 와 support image 의 feature 가 잘 aggregation 될 것이다.
