--- a/_studies/2024-05-15-YOLO-R.md
+++ b/_studies/2024-05-15-YOLO-R.md
@@ -1,4 +1,4 @@
-<!-- ---
+---
 layout: post
 title: YOLO-R
 tags: 
@@ -24,6 +24,7 @@ date: 2024-05-15
     | --- | --- | --- | --- |
     | explicit knowledge | shallow | directly | feature selection, transformer |
     | implicit knowledge | deep | nothing | implicit NN, deep equilibrium models,  |
+
 - YOLOR은 implicit knowlege 를 잘 추출하기 위해 unified network 사용.
 unified network 기법은 적은 양의 파라미터 증가 만으로도 성능 증가가 좋음
 - implicit knowledge learning process
@@ -33,9 +34,9 @@ unified network 기법은 적은 양의 파라미터 증가 만으로도 성능 
 unified network 의 자세한 설명이 필요하다면 이전 연구들을 공부해야 할 듯.
 knowledge modeling [1, 12, 22, 23]
 
-$\bf Implicit\ knowledge$
+#### Implicit knowledge
 
-- $Z = \{ \bf z_1 , z_2, ..., z_k \}$ ← implicit representation, constant tensor
+- $Z = \{  z_1 , z_2, ..., z_k \}$ ← implicit representation, constant tensor
 - task specific Implicit knowledge 와 input feature 간 내적을 이용해 해당 task에 맞는 good representation space 를 찾을 수 있음
 - Z  의 생김새는 vector, tensor, factorized matrix 일 수 있음
 제약은 없지만, 논문에서는 생김새가 어떤지에 따라 모델의 성능을 테스트함
@@ -43,13 +44,13 @@ $\bf Implicit\ knowledge$
 
 ### Theory
 
-<img src="images\화면 캡처 2022-05-23 183158.png" width="400px" height="300px"></img>
+<img src="images\화면 캡처 2022-05-23 183158.png" width="450px"></img>
 
 - feature alignment 를 통해 성능을 이끌어냄
 - good representation 를 찾는 것 → manifold space 에서 적절하게 projection 하는 것
 - manifold space 에서 projection 을 여러 번 수행함 → alignment 를 시켜줄 수 있는 추가 parameter, network (implicit knowledge) 필요.
 
-<img src="images\화면 캡처 2022-05-25 143523.jpg" width="400px" height="300px"></img>
+<img src="images\화면 캡처 2022-05-25 143523.jpg" width="450px"></img>
 
 - (a) 일반적인 ML 은 타겟과 예측의 오류를 최소화 함
 → 이렇게 하면 다른 테스크에는 해당 representation 을 써먹을 수 x
@@ -65,15 +66,15 @@ $F ( \mathbf{x}, \theta, \mathbf{Z}, \Phi, Y , \Psi ) = 0$
 - For different tasks
 $d_{\Psi} (f_\theta(\mathbf{x}) , g_{\Phi} (\mathbf{z}) ,y) = 0$
 
-<img src="images\캡처.JPG.jpg" width="400px" height="300px"></img>
+<img src="images\캡처.JPG.jpg" width="450px" ></img>
 
 - YOLO-R 은 위에서 소개된 implicit knowledge 를 위 architecture 처럼 사용함
 각 화살표가 implicit knowledge 를 집어넣었다는 표시임
 - 즉, 해당 위치에 임배딩을 하나 생성해주는 것임.
 
-$\bf Code\ view$
+### Code view
 
-<img src="images\Untitled (1).png" width="250px" height="20px"></img>
+<img src="images\Untitled (1).png" width="350px">
 
 i : FPN 에서 i 번째 scale
 
@@ -88,11 +89,11 @@ self.m : 모델의 마지막 layer
 → 해석 : self.ia, self.im 이 없다면 layer 를 통과하는 일반적인 feature 를 나타냄.
 두 모듈이 추가됨 으로, feature alignment 를 한 후, last layer 를 통과하여, prediction refinement 를 수행했다고 볼 수 있음.
 
-<img src="images\Untitled.png" width="400px" height="450px"></img>
+<img src="images\Untitled.png" width="450px" >
 
 - ImplicitA : feature alignment 할 수 있게하는 모듈.
 단순히 1차원 nn parameter 를 4차원으로 expand 해서 feature 에 더해주는 연산
 
 - implicitM :prediction refinement 할 수 있게하는 모듈.
 단순히 1차원 nn parameter 를 4차원으로 expand 해서 feature 에 곱해주는 연산
-곱해주어야 하기 때문에 initialization 할때, 평균을 1로 둔다. -->
+곱해주어야 하기 때문에 initialization 할때, 평균을 1로 둔다.
