--- a/_studies/2024-05-15-YOLO-R.md
+++ b/_studies/2024-05-15-YOLO-R.md
@@ -8,7 +8,8 @@ tags:
 math: true
 date: 2024-05-15
 ---
-
+# 비공개
+$\bf$
 # YOLO-R
 
 - 명시적 지식과 암시적 지식을 결합하여 모델 성능을 이끌어 내보자
@@ -44,13 +45,13 @@ knowledge modeling [1, 12, 22, 23]
 
 ### Theory
 
-<img src="images\화면 캡처 2022-05-23 183158.png" width="450px"></img>
+<img src="images\화면 캡처 2022-05-23 183158.png" width="650px">
 
 - feature alignment 를 통해 성능을 이끌어냄
 - good representation 를 찾는 것 → manifold space 에서 적절하게 projection 하는 것
 - manifold space 에서 projection 을 여러 번 수행함 → alignment 를 시켜줄 수 있는 추가 parameter, network (implicit knowledge) 필요.
 
-<img src="images\화면 캡처 2022-05-25 143523.jpg" width="450px"></img>
+<img src="images\화면 캡처 2022-05-25 143523.jpg" width="650px">
 
 - (a) 일반적인 ML 은 타겟과 예측의 오류를 최소화 함
 → 이렇게 하면 다른 테스크에는 해당 representation 을 써먹을 수 x
@@ -66,7 +67,7 @@ $F ( \mathbf{x}, \theta, \mathbf{Z}, \Phi, Y , \Psi ) = 0$
 - For different tasks
 $d_{\Psi} (f_\theta(\mathbf{x}) , g_{\Phi} (\mathbf{z}) ,y) = 0$
 
-<img src="images\캡처.JPG.jpg" width="450px" ></img>
+<img src="images\캡처.JPG.jpg" width="650px" >
 
 - YOLO-R 은 위에서 소개된 implicit knowledge 를 위 architecture 처럼 사용함
 각 화살표가 implicit knowledge 를 집어넣었다는 표시임
@@ -74,7 +75,7 @@ $d_{\Psi} (f_\theta(\mathbf{x}) , g_{\Phi} (\mathbf{z}) ,y) = 0$
 
 ### Code view
 
-<img src="images\Untitled (1).png" width="350px">
+<img src="images\Untitled (1).png" width="450px">
 
 i : FPN 에서 i 번째 scale
 
@@ -89,7 +90,7 @@ self.m : 모델의 마지막 layer
 → 해석 : self.ia, self.im 이 없다면 layer 를 통과하는 일반적인 feature 를 나타냄.
 두 모듈이 추가됨 으로, feature alignment 를 한 후, last layer 를 통과하여, prediction refinement 를 수행했다고 볼 수 있음.
 
-<img src="images\Untitled.png" width="450px" >
+<img src="images\Untitled.png" width="650px" >
 
 - ImplicitA : feature alignment 할 수 있게하는 모듈.
 단순히 1차원 nn parameter 를 4차원으로 expand 해서 feature 에 더해주는 연산
