--- a/_studies/2024-05-15-Meta-DETR.md
+++ b/_studies/2024-05-15-Meta-DETR.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: post
 title: Meta DETR
 tags: 
@@ -10,8 +10,7 @@ tags:
 math: true
 date: 2024-05-15
 ---
-# 비공개
-$\bf$
+
 
 # Meta-detr
 
@@ -40,4 +39,4 @@ $\bf$
 - Query feature 와 랜덤 샘플링한 support feature 를 각각 Attention 의 query, key 값으로 넣어준다.
 - Attention coefficent : $$A = \mathbf{Softmax} \left( \frac {\mathbf{(QW)} \mathbf{(SW)}^T} {\sqrt{d}} \right)$$, 
 where $d$ = the number of dimension , $Q$ = query feature, S = support feature, $W$ = learnable parameters (Linear projection)
-- 위와 같이 어탠션을 준다면, Query image 와 support image 의 feature 가 잘 aggregation 될 것이다.
+- 위와 같이 어탠션을 준다면, Query image 와 support image 의 feature 가 잘 aggregation 될 것이다. -->
